--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -24,6 +24,6 @@ jobs:
 
     - name: Build
       run: |
-        npm install
-        npx webpack
-        ng build
+        yes | npm install
+        yes | npx webpack
+        yes | ng build
